fixed project description and top btn on mobile

--- a/src/components/ProjectDetailCard/ProjectDetailCard.css
+++ b/src/components/ProjectDetailCard/ProjectDetailCard.css
@@ -117,20 +117,18 @@
   font-family: "Poppins";
 }
 
-.desc_card{
-  width: 80%;
-  padding: 2rem;
-  margin-top: 1rem;
-  border-radius: 0px;
-  box-shadow: 6px 7px 4px -6px rgba(0, 0, 0, 0.5);
-  border: 1px solid rgba(0, 0, 0, 0.062);
-  height: auto;
-  background-color: #FFF;
-  z-index: 1;
+.desc_label{
+  margin-bottom:1rem;
 }
 
-.desc_label{
-  margin-bottom:2rem;
+.desc_html{
+  width:100%;
+  height:auto;
+  overflow:hidden;
+}
+
+.desc_html img, .desc_html iframe{
+  height:auto!important;
 }
 
 
